# server/api/openapi-with-docs.json
@@ -6,24 +6,12 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/GetAllAuthors": {
+    "/api/Author/GetAllAuthors": {
       "get": {
         "tags": [
           "Author"
         ],
         "operationId": "Author_GetAllAuthors",
-        "requestBody": {
-          "x-name": "dto",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AuthorDto"
-              }
-            }
-          },
-          "required": true,
-          "x-position": 1
-        },
         "responses": {
           "200": {
             "description": "",
@@ -38,7 +26,38 @@
         }
       }
     },
-    "/CreateAuthor": {
+    "/api/Author/GetAuthorById/{id}": {
+      "get": {
+        "tags": [
+          "Author"
+        ],
+        "operationId": "Author_GetAuthorsById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthorDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Author/CreateAuthor": {
       "post": {
         "tags": [
           "Author"
@@ -70,7 +89,7 @@
         }
       }
     },
-    "/UpdateAuthor": {
+    "/api/Author/UpdateAuthor": {
       "patch": {
         "tags": [
           "Author"
@@ -102,7 +121,7 @@
         }
       }
     },
-    "/DeleteAuthor": {
+    "/api/Author/DeleteAuthor": {
       "delete": {
         "tags": [
           "Author"
